--- a/SuggestionForumAPI/src/main/resources/application.properties
+++ b/SuggestionForumAPI/src/main/resources/application.properties
@@ -2,9 +2,22 @@ spring.datasource.url=jdbc:mysql://localhost:3306/StudentDatabase
 spring.datasource.username=root
 spring.datasource.password=Justice@2021
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate_sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 server.error.include-massages=always
+## MULTIPART (MultipartProperties)
+# Enable multipart uploads
+upload.file.extensions=jpg, jpeg, gif, png,pdf,doc,docx,txt
+spring.servlet.multipart.enabled=true
+spring.http.multipart.enabled=true 
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=20MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=40MB
+
+#
