--- a/SuggestionForumAPI/src/main/resources/application.properties
+++ b/SuggestionForumAPI/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/StudentDatabase
 spring.datasource.username=root
 spring.datasource.password=Justice@2021
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto = create
+
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate_sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -20,4 +21,4 @@ spring.servlet.multipart.max-file-size=20MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=40MB
 
-#
+
