After changing some mappings

--- a/SuggestionForumAPI/pom.xml
+++ b/SuggestionForumAPI/pom.xml
@@ -61,6 +61,15 @@
             <artifactId>thymeleaf</artifactId>
             <version>3.0.14.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>jstl</artifactId>
+        </dependency>
 
 
 	</dependencies>
