--- a/SuggestionForumAPI/src/main/resources/application.properties
+++ b/SuggestionForumAPI/src/main/resources/application.properties
@@ -21,5 +21,7 @@ spring.servlet.multipart.max-file-size=20MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=40MB
 
+server.servlet.context-path=/api
+
 
 
