--- a/SuggestionForumAPI/src/main/resources/application.properties
+++ b/SuggestionForumAPI/src/main/resources/application.properties
@@ -20,6 +20,7 @@ spring.servlet.multipart.file-size-threshold=2KB
 spring.servlet.multipart.max-file-size=20MB
 # Max Request Size
 spring.servlet.multipart.max-request-size=40MB
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
 
 
