After changing mysql driver to posgres driver

--- a/SuggestionForumAPI/src/main/resources/application.properties
+++ b/SuggestionForumAPI/src/main/resources/application.properties
@@ -1,13 +1,11 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/StudentDatabase
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5433/studentdatabase
+spring.datasource.username=postgres
 spring.datasource.password=Justice@2021
-spring.jpa.generate-ddl=true
-
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate_sql=true
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL81Dialect
 server.error.include-massages=always
 ## MULTIPART (MultipartProperties)
 # Enable multipart uploads
